# rusty_vorld

./: .gitignore  Cargo.toml  README.md
assets/models/: rifle.gltf
assets/shaders/: voxel.wgsl
src/: atlas_loader.rs  debug.rs  flying_camera.rs  gun.rs  health.rs  hit_flash.rs  input.rs  lifetime.rs  main.rs  mesher.rs  named_collision_groups.rs  npc_spawner.rs  player.rs  player_camera.rs  player_input.rs  projectile.rs  scene_spawner.rs  smoothed_follow.rs  test_scene_spawner.rs  utils.rs  voxel.rs  zombie.rs
src/voxel/: atlas_loader.rs  block_ids.rs  chunk.rs  direction.rs  mod.rs  world.rs
