[package]
name = "rusty_vorld"
version = "0.1.0"
edition = "2021"
authors = [ "Harry Jones <harry@badprophecy.games>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bevy_rapier3d = { version="0.16.2", features = ["debug-render" ] }
